--- a/config/config.yaml
+++ b/config/config.yaml
@@ -5,3 +5,10 @@ data_ingestion:
   source_url: https://github.com/Abdoul1996/End-to-End-ML-Project/raw/main/research/WineQT.csv.zip
   local_data_file: artifacts/data_ingestion/WineQT.zip
   unzip_dir: artifacts/data_ingestion
+
+data_validation:
+  root_dir: artifacts/data_validation
+  unzip_data_dir: artifacts/data_ingestion/WineQT.csv
+  STATUS_FILE: artifacts/data_validation/status.txt
+
+
